mega collapse fix + content
banner still needs to be reactive to page id

--- a/src/Kasa.css
+++ b/src/Kasa.css
@@ -146,3 +146,51 @@ body{
 }
 
 /* Home specific css ends (needs phone version now) */ 
+
+/* About specific css */
+
+.CollapseBlock{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    box-sizing: border-box;
+    gap: 15px;
+}
+
+.CollapseBtn{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #FF6C5C;
+    width: 1023px;
+    min-height: 50px;
+    border-radius: 5px;
+    border: none;
+    box-sizing: border-box;
+    color: white;
+    font-size: xx-large;
+    font-weight: 900;
+    font-family: "Montserrat";
+}
+
+.CollapseBtn img{
+    object-fit: contain;
+    width: 32px;
+    height: 32px;
+}
+
+.CollapseCtn{
+    height: 100px;
+    background-color: #FBFBFB;
+    border-radius: 5px;
+    box-sizing: border-box;
+    max-width: 1023px;
+    padding: 15px;
+    border-radius: 5px;
+    font-size: large;
+    font-weight: 900;
+}
+
+
